fix title slide for size, spacing, color

--- a/source/_sass/themes/dark.scss
+++ b/source/_sass/themes/dark.scss
@@ -11,6 +11,8 @@
   --r-heading-color: #{c.$primary-dark};
   --r-link-color: #{c.$secondary-dark};
   --r-link-color-hover: #{c.$tertiary-dark};
+
+  --presentation-title-border: #{c.$tertiary-dark};
 }
 
 // Here we have further custom CSS for the theme. Most of the styles are
