--- a/source/_sass/themes/light.scss
+++ b/source/_sass/themes/light.scss
@@ -1,6 +1,13 @@
+// Include our colors, and label it `*` since colors are prefixed with `color-`.
+@use "colors" as c;
+
 // Include the custom props partial. The gives us access to CSS custom
 // properties for the theme.
 @use "./props";
+
+:root {
+  --presentation-title-border: #{c.$tertiary-light};
+}
 
 // Here we have further custom CSS for the theme. Most of the styles are
 // inherited from the `simple` theme -- some of those styles we may want to
